js/js.translator/testData/incremental/invalidation/wasmJsInterop/main/m.1.kt
fun box(): String {
    return foo() + boo()
}